iptables/iptables.conf
# Generated by iptables-save v1.4.14 on Tue Jul 23 08:11:31 2013
*filter
:INPUT ACCEPT [3:152]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [470:61312]
-A INPUT -p tcp -m tcp --sport 53 -j ACCEPT
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 993 -j ACCEPT
-A INPUT -j DROP
COMMIT
# Completed on Tue Jul 23 08:11:31 2013
